@@ -14,3 +14,7 @@ UPDATE #DB_PREFIX#_Options SET `keyname` = 'showChart' WHERE `keyname` = 'useFla
 DELETE FROM `#DB_PREFIX#_Options` WHERE `keyname` = 'scripturl';
 ALTER TABLE `#DB_PREFIX#_Events_ChangeRole` ADD INDEX ( `playerId` );
 ALTER TABLE `#DB_PREFIX#_Events_ChangeRole` ADD INDEX ( `serverId` );
+
+ALTER TABLE `hlstats_dev`.`hlstats_Events_ChangeTeam` ADD INDEX ( `team` ) ;
+ALTER TABLE `hlstats_dev`.`hlstats_Events_ChangeTeam` ADD INDEX ( `serverId` ) ;
+ALTER TABLE `hlstats_dev`.`hlstats_Servers` ADD INDEX ( `game` ) ;
